[project]
name = "zutto"
version = "0.1.0"
description = ""
authors = [
    {name = "{Nanako}",email = "{caiziyemu@gmail.com}"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.dependencies]
stable-baselines3 = "*"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
